Auth api docs fix
