# storage/api-docs/api-docs.json
@@ -4,8 +4,13 @@
         "title": "Social Network",
         "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "http://social.loc/api"
+        }
+    ],
     "paths": {
-        "/api/login": {
+        "/login": {
             "post": {
                 "tags": [
                     "auth"
@@ -93,7 +98,7 @@
                 }
             }
         },
-        "/api/register": {
+        "/register": {
             "post": {
                 "tags": [
                     "auth"
